Prefer usage of StandardCharsets.UTF_8 over "UTF-8" charset reference (#35080)
Used StandardCharsets.UTF_8 instead of "UTF-8" whenever possible.
This reduces some warnings, simplifies the code and is more readable.

Fixes #35080

Signed-off-by: Thomas Darimont <thomas.darimont@googlemail.com>