@@ -24,6 +24,7 @@ import java.io.File;
 import java.io.FileInputStream;
 import java.io.IOException;
 import java.io.InputStream;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.util.Optional;
 import org.keycloak.common.util.StringPropertyReplacer;
@@ -39,7 +40,7 @@ public abstract class AbstractFileBasedImportProvider implements ImportProvider 
 
     protected InputStream parseFile(File importFile) throws IOException {
         if (ExportImportConfig.isReplacePlaceholders()) {
-            String raw = new String(Files.readAllBytes(importFile.toPath()), "UTF-8");
+            String raw = Files.readString(importFile.toPath());
             String parsed = replaceProperties(raw, ENV_VAR_PROPERTY_RESOLVER);
             return new ByteArrayInputStream(parsed.getBytes());
         }
